# paga_cosmos

./: .gitignore  Makefile
abi/contracts/Claim.sol/: ClaimContract.dbg.json  ClaimContract.json
abi/contracts/Commitment.sol/: CommitmentContract.json
abi/contracts/PAGA.sol/: PAGAContract.json
abi/contracts/Politician.sol/: Politician.json
abi/contracts/Voter.sol/: VoterContract.json
app/: package.json
app/components/: LayoutComponents.tsx  app_index.tsx
app/components/wallet/: Connect.tsx  Wallet.tsx
app/data/: db.json
app/pages/: _app.tsx  _document.tsx  index.tsx
app/pages/api/users/: index.js
app/pages/comunidade/: index.jsx
app/src/: services.js  utils.js
app/src/contracts/: execute.ts  query.ts  wallet.ts
app/src/controllers/: CommitmentController.js  PoliticianController.js  mainController.js
app/src/hooks/: magic.js
app/styles/: globals.css
docs/: README.md  README_PT.md
infra/: docker-compose.yml
infra/app/: Dockerfile
politician_dashboard/: index.html
politician_dashboard/src/: App.tsx
politician_dashboard/src/components/: CandidateTable.tsx  EngagementTags.tsx  Header.tsx  RegionMap.tsx  StatsSummary.tsx
politician_dashboard/src/data/: mockData.ts
politician_dashboard/src/types/: types.ts
web3/: Cargo.toml  Makefile  RFC01.md  RFC02.md  RFC03.md  RFC04.MD  RFC05.MD  build.sh
web3/contracts/electors/: Cargo.toml
web3/contracts/electors/src/: errors.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  utils.rs
web3/contracts/paga/: Cargo.toml
web3/contracts/paga/src/: errors.rs  execute_electors.rs  execute_politicians.rs  lib.rs  msg.rs  notes.txt  state.rs  utils.rs
web3/contracts/politicians/: Cargo.toml
web3/contracts/politicians/src/: errors.rs  execute.rs  lib.rs  msg.rs  query.rs  (+2 more)
web3/schema/: execute_msg.json
web3/scripts/: contract_schema.ts  deploy.ts  package.json  utils.ts
web3/scripts/commands/: commands.ts  compile_command.ts  contract.ts
web3/scripts/types/: type.ts
(+1 files in other folders)
